# minutes

./: ARCHITECTURE.md  CLAUDE.md  audio-accumulation.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: frontend-react-engineer.md  rust-tauri-backend.md
documentation/designs/: minutes.pen  navigation-redesign.pen
documentation/mvp/: 00_roadmap.md  01_system_design.md  02.0_stage_0_plan.md  02.1_stage_1_plan.md  02.2_stage_2_plan.md  02.3_stage_3_plan.md  02.4_stage_4_plan.md  02.5_stage_5_plan.md  02.6_stage_6_plan.md
scripts/: reprocess_chunks.sh
src/: index.css  main.tsx  router.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.claude/agent-memory/frontend-react-engineer/: MEMORY.md  custom-hooks.md  tauri-commands-speakers.md  tauri-events.md
src-tauri/.claude/agent-memory/rust-tauri-backend/: MEMORY.md  project_dual_stream_architecture.md  reference_module_structure.md  reference_patterns.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: mod.rs  search.rs  sessions.rs  speakers.rs
src-tauri/src/audio/: accumulator.rs  capture.rs  chunker.rs  mod.rs  silero.rs  vad.rs
src-tauri/src/client/: mod.rs  speech_swift.rs
src-tauri/src/commands/: devices.rs  health.rs  mod.rs  search.rs  sessions.rs  settings.rs  speakers.rs
src-tauri/src/db/: migrations.rs  mod.rs  samples.rs  search.rs  segments.rs  sessions.rs  settings.rs  speakers.rs
src-tauri/src/embed/: mod.rs
src-tauri/src/events/: mod.rs
src/components/: AudioLevelGraph.tsx  (+13 more)
(+75 files in other folders)
