[package]
name = "minutes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minutes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2"
sqlite-vec = "0"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
cpal = "0.17"
webrtc-vad = "0.4"
tract-onnx = "0.21"
fastembed = "4"
hound = "3"

[features]
debug-audio = []

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

